--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap');
 body {
   margin: 0;
-font-family: 'Rajdhani', sans-serif;
+font-family: 'Rajdhani', sans-serif , 'Homemade Apple', cursive;
+}
+@layer base {
+  html {
+    font-family: 'Rajdhani', sans-serif , 'Homemade Apple', cursive;
+  }
+}
 
+/* hero area section banner part css */
+.default-font-use{
+  font-family: 'Homemade Apple';
+}
+
+
+/* home page shop cart css */
+.card-parent{
+  position: relative;
+  margin-bottom: 50px;
+}
+.card-icon{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    background-color: rgba(0, 0, 0, 0.627);
+    transition: all linear .6s;
+    overflow: hidden;
+}
+.card-parent:hover .card-icon {
+ transform: scale(1);
 }
