--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap');
 body {
+  scroll-behavior: smooth;
   margin: 0;
 font-family: 'Rajdhani', sans-serif , 'Homemade Apple', cursive;
 }
